--- a/files/tmux.conf
+++ b/files/tmux.conf
@@ -3,6 +3,9 @@
 # bind-key -t vi-edit     Up   history-up
 # bind-key -t vi-edit     Down history-down
 
+set -g mouse on
+set-window-option -g xterm-keys on
+
 # Set prefix to Ctrl-a
 unbind C-b
 set -g prefix C-a
