--- a/dots.yml
+++ b/dots.yml
@@ -80,6 +80,10 @@
       # - src: profile
       #   dst: "{{ home }}/.profile"
       #   mode: "0775"
+      - src: qutebrowser/config.py
+        dst: "{{ xdg_config_home }}/qutebrowser/config.py"
+      - src: qutebrowser/config.yaml
+        dst: "{{ xdg_config_home }}/qutebrowser/config.yaml"
       - src: qutebrowser/quickmarks
         dst: "{{ xdg_config_home }}/qutebrowser/quickmarks"
       - src: ranger/commands.py
