matterhorn.ini: change default browser to qutebrowser

--- a/files/matterhorn.ini
+++ b/files/matterhorn.ini
@@ -87,7 +87,7 @@ host: mattermost.galois.com
 # OS X:
 # urlOpenCommand = open
 # Linux:
-urlOpenCommand = firefox
+urlOpenCommand = qutebrowser
 
 # This setting indicates whether the URL-opening command is interactive
 # in the terminal. Set this to True if your urlOpenCommand is a terminal
