dots.yml: actually symlink agignore

--- a/dots.yml
+++ b/dots.yml
@@ -22,6 +22,8 @@
     symlinks:
       # - src: aspell-dict
       #   dst: "{{ home }}/.aspell.en.pws"
+      - src: agignore
+        dst: "{{ home }}/.agignore"
       - src: alacritty.yml
         dst: "{{ xdg_config_home }}/alacritty/alacritty.yml"
       - src: beets.yml
