--- a/files/i3status.conf
+++ b/files/i3status.conf
@@ -4,6 +4,7 @@ general {
   interval = 5
 }
 
+order += "read_file focus"
 order += "disk /"
 order += "wireless wlp2s0"
 order += "battery 0"
@@ -78,6 +79,13 @@ disk "/" {
   format = "💿: %percentage_used"
 
   min_width = 100
+  align = "center"
+  separator_block_width = 40
+}
+
+read_file focus {
+  path = "/run/user/1000/focus.txt"
+  format = "focus: %content"
   align = "center"
   separator_block_width = 40
 }
