--- a/dots.yml
+++ b/dots.yml
@@ -91,6 +91,10 @@
         dst: "{{ home }}/.emacs.d/eshell/alias"
       - src: offlineimaprc
         dst: "{{ home }}/.offlineimaprc"
+      - src: pet/config.toml
+        dst: "{{ xdg_config_home }}/pet/config.toml"
+      - src: pet/snippet.toml
+        dst: "{{ xdg_config_home }}/pet/snippet.toml"
       # Currently breaks GNOME on Fedora
       # - src: profile
       #   dst: "{{ home }}/.profile"
