--- a/files/polybar.ini
+++ b/files/polybar.ini
@@ -8,6 +8,8 @@ width = 100%
 height = 27
 offset-y = 5
 
+font-0 = Hack:size=14
+
 background = #005f627a
 foreground = #f2f2f2
 
@@ -23,13 +25,27 @@ module-margin-right = 2
 
 modules-left = i3
 modules-center = xwindow
-modules-right = battery clock
+modules-right = vol alsa battery clock
 
 [module/i3]
 type = internal/i3
 
+[module/vol]
+type = custom/text
+content = vol:
+click-left = ~/.config/rofi/scripts/volume.sh
+
+[module/alsa]
+type = internal/alsa
+format-volume = <label-volume>
+click-left = ~/.config/rofi/scripts/volume.sh
+
 [module/battery]
 type = internal/battery
+format-battery = bat: <label-volume>
+format-charging = bat: <label-charging>
+format-discharging = bat: <label-discharging>
+
 
 ; This is useful in case the battery never reports 100% charge
 full-at = 99
