--- a/files/polybar.ini
+++ b/files/polybar.ini
@@ -8,7 +8,9 @@ width = 100%
 height = 27
 offset-y = 5
 
-font-0 = Hack:size=14
+font-0 = Hack:size=14;2
+font-1 = FontAwesome:size=8;-2
+font-4 = Unifont:size=6;-3
 
 background = #005f627a
 foreground = #f2f2f2
@@ -24,8 +26,8 @@ module-margin-left = 0
 module-margin-right = 2
 
 modules-left = i3
-modules-center = xwindow
-modules-right = vol alsa battery clock
+modules-center = clock
+modules-right = vol alsa battery memory
 
 [module/i3]
 type = internal/i3
@@ -35,17 +37,40 @@ type = custom/text
 content = vol:
 click-left = ~/.config/rofi/scripts/volume.sh
 
+; content-background = #fff85a
+; content-foreground = #43433a
+
 [module/alsa]
 type = internal/alsa
 format-volume = <label-volume>
 click-left = ~/.config/rofi/scripts/volume.sh
+
+; format-volume-padding = 2
+; format-volume-background = #fff85a
+; format-volume-foreground = #43433a
+; format-volume-underline = #fffb8f
+; format-volume-overline = #fffb8f
+
+; format-muted-padding = 2
+; format-muted-background = #77ffffff
+; format-muted-foreground = #666666
 
 [module/battery]
 type = internal/battery
 format-battery = bat: <label-volume>
 format-charging = bat: <label-charging>
 format-discharging = bat: <label-discharging>
+; format-discharging = <ramp-capacity> <label-discharging>
 
+; Only applies if <ramp-capacity> is used
+ramp-capacity-0 = ▁
+ramp-capacity-1 = ▃
+ramp-capacity-2 = ▅
+ramp-capacity-3 = ▆
+ramp-capacity-4 = █
+
+; Only applies if <bar-capacity> is used
+bar-capacity-width = 10
 
 ; This is useful in case the battery never reports 100% charge
 full-at = 99
@@ -54,7 +79,28 @@ full-at = 99
 type = internal/date
 date = %%{T3}%Y-%m-%d %H:%M%%{T-}
 
-[module/xwindow]
-type = internal/xwindow
+[module/memory]
+type = internal/memory
+
+format = <label> <bar-used>
+format-padding = 2
+format-background = #cb66cc
+format-foreground = #ffe3ff
+format-underline = #e58de6
+format-overline = #e58de6
+
+label = memory
+label-font = 3
+
+bar-used-width = 10
+bar-used-indicator = |
+bar-used-indicator-font = 4
+bar-used-indicator-foreground = #ffaaf5
+bar-used-fill = ─
+bar-used-fill-font = 4
+bar-used-fill-foreground = #ffaaf5
+bar-used-empty = ─
+bar-used-empty-font = 4
+bar-used-empty-foreground = #934e94
 
 ; vim:ft=dosini
