--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "nur"]
 	path = nur
 	url = https://github.com/langston-barrett/nur
+[submodule "deps/eww-layer"]
+	path = deps/eww-layer
+	url = https://github.com/coljamkop/eww-layer
