--- a/files/polybar.ini
+++ b/files/polybar.ini
@@ -1,3 +1,4 @@
+; -*- ini -*-
 [settings]
 throttle-ms = 50
 throttle-limit = 5
@@ -82,14 +83,14 @@ date = %%{T3}%Y-%m-%d %H:%M%%{T-}
 [module/memory]
 type = internal/memory
 
-format = <label> <bar-used>
-format-padding = 2
-format-background = #cb66cc
-format-foreground = #ffe3ff
-format-underline = #e58de6
-format-overline = #e58de6
+format = mem: <label>%
+; format-padding = 2
+; format-background = #cb66cc
+; format-foreground = #ffe3ff
+; format-underline = #e58de6
+; format-overline = #e58de6
 
-label = memory
+label = %percentage_used%
 label-font = 3
 
 bar-used-width = 10
@@ -102,5 +103,3 @@ bar-used-fill-foreground = #ffaaf5
 bar-used-empty = ─
 bar-used-empty-font = 4
 bar-used-empty-foreground = #934e94
-
-; vim:ft=dosini
