--- a/files/polybar.ini
+++ b/files/polybar.ini
@@ -14,7 +14,7 @@ font-1 = FontAwesome:size=8;-2
 font-4 = Unifont:size=6;-3
 
 background = #005f627a
-foreground = #f2f2f2
+foreground = #000000
 
 overline-size = 2
 overline-color = #bc92f8
