--- a/files/alacritty.yml
+++ b/files/alacritty.yml
@@ -68,22 +68,22 @@ scrolling:
 font:
   # Normal (roman) font face
   normal:
-    # family: monospace
     family: Hack
+    # family: Hack
     # The `style` can be specified to pick a specific face.
-    #style: Regular
+    style: Regular
 
   # Bold font face
   bold:
-    family: monospace
+    family: Hack
     # The `style` can be specified to pick a specific face.
-    #style: Bold
+    style: Bold
 
   # Italic font face
   italic:
-    family: monospace
+    family: Hack
     # The `style` can be specified to pick a specific face.
-    #style: Italic
+    style: Italic
 
   # Point size
   size: 7.0
