--- a/files/polybar.ini
+++ b/files/polybar.ini
@@ -8,7 +8,7 @@ width = 100%
 height = 27
 offset-y = 5
 
-font-0 = Hack:size=14;2
+font-0 = Fantasque Sans Mono:size=16;3
 font-1 = FontAwesome:size=8;-2
 font-4 = Unifont:size=6;-3
 
@@ -35,7 +35,7 @@ monitor = DP1
 modules-left = workspaces
 modules-center = clock
 
-font-0 = Hack:size=16;2
+font-0 = Fantasque Sans Mono:size=18;2
 
 [bar/top]
 inherit = section/base
