--- a/files/alacritty.yml
+++ b/files/alacritty.yml
@@ -68,25 +68,25 @@ scrolling:
 font:
   # Normal (roman) font face
   normal:
+    # family: monospace
     family: Hack
-    # family: Hack
     # The `style` can be specified to pick a specific face.
-    style: Regular
+    #style: Regular
 
   # Bold font face
   bold:
-    family: Hack
+    family: monospace
     # The `style` can be specified to pick a specific face.
-    style: Bold
+    #style: Bold
 
   # Italic font face
   italic:
-    family: Hack
+    family: monospace
     # The `style` can be specified to pick a specific face.
-    style: Italic
+    #style: Italic
 
   # Point size
-  size: 7.0
+  size: 16.0
 
   # Offset is the extra space around each character. `offset.y` can be thought of
   # as modifying the line spacing, and `offset.x` as modifying the letter spacing.
