--- a/files/alacritty.yml
+++ b/files/alacritty.yml
@@ -75,18 +75,18 @@ font:
 
   # Bold font face
   bold:
-    family: monospace
+    family: Hack
     # The `style` can be specified to pick a specific face.
-    #style: Bold
+    style: Bold
 
   # Italic font face
   italic:
-    family: monospace
+    family: Hack
     # The `style` can be specified to pick a specific face.
-    #style: Italic
+    style: Italic
 
   # Point size
-  size: 16.0
+  size: 7.0
 
   # Offset is the extra space around each character. `offset.y` can be thought of
   # as modifying the line spacing, and `offset.x` as modifying the letter spacing.
