--- a/dots.yml
+++ b/dots.yml
@@ -138,6 +138,8 @@
       # - src: profile
       #   dst: "{{ home }}/.profile"
       #   mode: "0775"
+      - src: pycodestyle.ini
+        dst: "{{ xdg_config_home }}/pycodestyle"
       - src: qutebrowser/config.py
         dst: "{{ xdg_config_home }}/qutebrowser/config.py"
         graphical: true
