--- a/files/emacs/local/Makefile
+++ b/files/emacs/local/Makefile
@@ -3,6 +3,7 @@ SRCS = $(wildcard *.el)
 OBJS = $(SRCS:.el=.elc)
 PATTERN = .*
 
+# TODO: Individualize
 $(OBJS): %.elc: %.el
 	cask build
 
@@ -12,6 +13,10 @@ build: $(OBJS)
 .PHONY: test
 test: build
 	$(CASK) exec buttercup -L . --pattern '$(PATTERN)' test
+
+.PHONY: entr
+entr: build
+	find . -name "*.el" -or -name "Makefile" | entr -c -s "make test"
 
 .PHONY: clean
 clean:
