--- a/files/alacritty.yml
+++ b/files/alacritty.yml
@@ -260,9 +260,9 @@ colors:
 #   - Linear
 #
 # Specifying a `duration` of `0` will disable the visual bell.
-visual_bell:
-  animation: EaseOutExpo
-  duration: 0
+# visual_bell:
+#   animation: EaseOutExpo
+#   duration: 0
 
 # Background opacity
 #
@@ -321,7 +321,7 @@ selection:
   # clipboard.
   save_to_clipboard: false
 
-dynamic_title: true
+window.dynamic_title: true
 
 cursor:
   # Cursor style
