--- a/files/qutebrowser/config.yaml
+++ b/files/qutebrowser/config.yaml
@@ -3,6 +3,7 @@ fonts.default_size: "16px"
 bindings.commands:
   normal:
     tL: open https://outline.com/{url}
+    p: open -t https://getpocket.com/edit?url={url}
 content.images: true
 aliases:
   pocket: "open -t https://getpocket.com/edit?url={url}"
