--- a/dots.yml
+++ b/dots.yml
@@ -202,6 +202,10 @@
         dst: "{{ home }}/.sh.d"
         mode: "0750"
         minimal: true
+      - src: bash.d
+        dst: "{{ home }}/.bash.d"
+        mode: "0750"
+        minimal: true
       - src: zsh.d
         dst: "{{ home }}/.zsh.d"
         mode: "0750"
