--- a/dots.yml
+++ b/dots.yml
@@ -274,20 +274,21 @@
         and ((item.minimal | default(False)) or ((item.minimal | default(False)) == minimal))
       with_items: "{{ symlinks }}"
 
-    - name: symlink envrcs
-      ignore_errors: yes
-      file:
-        follow: true
-        state: link
-        src: "{{ playbook_dir }}/files/envrcs/{{ item.project }}"
-        path: "{{ home }}/code/{{ item.project }}/.envrc"
-        owner: "{{ username }}"
-        group: "{{ username }}"
-        mode: "0640"
-      with_items:
-        - project: crucible
-        - project: herms
-        - project: klister
+    # # TODO: Make this conditional on the directories existing
+    # - name: symlink envrcs
+    #   ignore_errors: yes
+    #   file:
+    #     follow: true
+    #     state: link
+    #     src: "{{ playbook_dir }}/files/envrcs/{{ item.project }}"
+    #     path: "{{ home }}/code/{{ item.project }}/.envrc"
+    #     owner: "{{ username }}"
+    #     group: "{{ username }}"
+    #     mode: "0640"
+    #   with_items:
+    #     # - project: crucible
+    #     # - project: herms
+    #     # - project: klister
 
     - name: clone qutebrowser dracula theme
       git:
@@ -321,4 +322,4 @@
 
     - name: install packages
       command: nix-env -if nixos/minimal.nix
-      when: "ansible_distribution != 'NixOS'"
+      
