--- a/dots.yml
+++ b/dots.yml
@@ -131,6 +131,7 @@
         dst: "{{ home }}/.emacs.d/eshell/alias"
       - src: nix.conf
         dst: "{{ xdg_config_home }}/nix/nix.conf"
+        minimal: true
       - src: offlineimaprc
         dst: "{{ home }}/.offlineimaprc"
       - src: polybar.ini
