--- a/files/nix.conf
+++ b/files/nix.conf
@@ -1,2 +1,3 @@
-substituters = https://cache.nixos.org https://cache.nixos.org/ https://hie-nix.cachix.org https://all-hies.cachix.org https://nix-community.cachix.org
+substituters = https://cache.nixos.org https://cache.nixos.org/ https://all-hies.cachix.org https://nix-community.cachix.org
 trusted-public-keys = cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY= fryingpan.dev.galois.com-1:z0mUoDyQ+o8E4PEIOGb3UaT40EAmSte7vidUvAJdjmU= hie-nix.cachix.org-1:EjBSHzF6VmDnzqlldGXbi0RM3HdjfTU3yDRi9Pd0jTY= all-hies.cachix.org-1:JjrzAOEUsD9ZMt8fdFbzo3jNAyEWlPAwdVuHw4RD43k= nix-community.cachix.org-1:mB9FSh9qf2dCimDSUo8Zy7bkq5CX+/rkCWyvRCYg3Fs=
+experimental-features = nix-command flakes
