--- a/files/polybar.ini
+++ b/files/polybar.ini
@@ -31,7 +31,7 @@ inherit = section/base
 height = 40
 
 monitor-strict = true
-monitor = DP1
+monitor = eDP1
 modules-left = workspaces
 modules-center = clock
 
@@ -39,7 +39,7 @@ font-0 = Fantasque Sans Mono:size=18;2
 
 [bar/top]
 inherit = section/base
-monitor = DP1
+monitor = eDP-1
 
 modules-left = workspaces
 modules-center = clock
