--- a/files/polybar.ini
+++ b/files/polybar.ini
@@ -39,7 +39,7 @@ font-0 = Fantasque Sans Mono:size=18;2
 
 [bar/top]
 inherit = section/base
-monitor = eDP-1
+monitor = DP-2
 
 modules-left = workspaces
 modules-center = clock
