--- a/files/polybar.ini
+++ b/files/polybar.ini
@@ -41,8 +41,7 @@ font-0 = Fantasque Sans Mono:size=18;2
 inherit = section/base
 monitor = DP-0
 
-modules-left = workspaces
-modules-center = clock
+modules-left = clock
 modules-right = vol alsa battery memory
 
 [module/i3]
