--- a/files/helix.toml
+++ b/files/helix.toml
@@ -9,6 +9,7 @@ theme = "onedark"
 "*" = ["search_selection", "search_next"]
 "0" = "goto_line_start"
 "V" = "extend_line_below"
+"G" = "goto_last_line"
 "q" = "record_macro"
 "C-r" = "redo"
 "C-j" = "scroll_down"
@@ -22,3 +23,7 @@ theme = "onedark"
 [keys.select]
 "$" = "goto_line_end"
 "V" = "extend_line_below"
+"up" = "expand_selection"
+"down" = "shrink_selection"
+"left" = "select_prev_sibling"
+"right" = "select_next_sibling"
