--- a/files/tmux.conf
+++ b/files/tmux.conf
@@ -1,24 +1,17 @@
-# setw     -g mode-keys   vi
-# set      -g status-keys vi
-# bind-key -t vi-edit     Up   history-up
-# bind-key -t vi-edit     Down history-down
+# https://ianthehenry.com/posts/how-to-configure-tmux/
+# https://github.com/tmux-plugins/tmux-sensible/blob/master/sensible.tmux
+unbind-key -a
+
+set-option -g mode-keys vi
+
+set -g copy-command "xsel -ib"
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel
+bind-key -T copy-mode-vi v send-keys -X begin-selection
 
 set -g mouse on
-set-window-option -g xterm-keys on
 
-# Set prefix to Ctrl-a
-unbind C-b
-set -g prefix C-a
-bind a send-prefix
-
-# Spacemacs window splits
-bind / split-window -h
-bind - split-window -v
-
-# List of plugins
 # set -g @plugin 'tmux-plugins/tpm'
 # set -g @plugin 'tmux-plugins/tmux-sensible'
 # set -g @plugin 'tmux-plugins/tmux-battery'
 
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 # run '~/.tmux/plugins/tpm/tpm'
