--- a/files/tmux.conf
+++ b/files/tmux.conf
@@ -4,9 +4,56 @@ unbind-key -a
 
 set-option -g mode-keys vi
 
+# Remove delay after pressing ESC
+set -s escape-time 0
+
+# Increase scrollback buffer size from 2000 lines
+set -g history-limit 20000
+
+# Increase tmux messages display duration from 750ms to 4s
+set -g display-time 4000
+
+# Upgrade $TERM
+set -g default-terminal "screen-256color"
+
 set -g copy-command "xsel -ib"
 bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel
 bind-key -T copy-mode-vi v send-keys -X begin-selection
+
+# https://ianthehenry.com/posts/tmux-copy-last-command/
+bind-key -T copy-mode-vi L {
+  copy-mode
+  send -X clear-selection
+  send -X start-of-line
+  send -X start-of-line
+  send -X cursor-up
+  send -X cursor-up
+  send -X cursor-up
+  send -X cursor-up
+  send -X start-of-line
+  send -X start-of-line
+
+  if -F "#{m:*\u2003*,#{copy_cursor_line}}" {
+    send -X search-forward-text "\u2003"
+    send -X stop-selection
+    send -X -N 2 cursor-right
+    send -X begin-selection
+    send -X end-of-line
+    send -X end-of-line
+    if "#{m:*\u2003?*,#{copy_cursor_line}}" {
+      send -X cursor-left
+    }
+  } {
+    send -X end-of-line
+    send -X end-of-line
+    send -X begin-selection
+    send -X search-backward-text "\u2003"
+    send -X end-of-line
+    send -X end-of-line
+    send -X cursor-right
+    send -X stop-selection
+  }
+}
 
 set -g mouse on
 
