--- a/files/tmux.conf
+++ b/files/tmux.conf
@@ -19,8 +19,11 @@ set -g default-terminal "screen-256color"
 set -g copy-command "xsel -ib"
 bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel
 bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi i copy-mode -q
 
 # https://ianthehenry.com/posts/tmux-copy-last-command/
+#
+# u2003 is an em-space
 bind-key -T copy-mode-vi L {
   copy-mode
   send -X clear-selection
